# iTLS-Enso

./: Makefile  README.md  build.sh  main.c
kernel/: CMakeLists.txt  itls.yml  main.c
misc/: certs.cer  comm2.suprx  compat.suprx  lhttp.suprx  lssl.suprx
old_dns_fix/: CMakeLists.txt  exports.yml  main.c
pkg/Media/: 00  CA_LIST_368.cer
plugin/: CMakeLists.txt  exports.yml
plugin/src/: main.c
sce_sys/livearea/contents/: template.xml
user/: exports.yml
user/src/: main.c
